--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <DOCTYPE! html>
 <html>
     <head>
-        <title>罗仔的情人节小礼物</title>
+        <title></title>
         <style>
             #countup p {
                 display: inline-block;
@@ -48,7 +48,6 @@
         </style>
     </head>
     <body id='bg'>
-        <div id="hello">hello仔仔~情人节快乐~</div>
         <div id="center">
 
             <div id="countup">
@@ -67,15 +66,12 @@
             </div>
 
         </div>
-        <div>
-            <img id="pig"src="piglet.png"/>
-        </div>
 
 
         <script>
             window.onload=function() {
                 // Month,Day,Year,Hour,Minute,Second
-                upTime('aug,06,2013,12:00:00'); // ****** Change this line!
+                upTime('dec,05,2016,12:00:00'); // ****** Change this line!
             };
             function upTime(countTo) {
             now = new Date();
@@ -98,7 +94,6 @@
             }
 
             document.getElementById("pig").addEventListener("click", function(){
-                document.getElementById("hello").innerHTML = "我爱你哦"
             })
         </script>
     </body>
