--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 right:0px;
             }
             #bg {
-                background-color: blanchedalmond;
+                background-color: #FFB6C1;
             }
             #hello {
                 position: absolute;
@@ -71,7 +71,7 @@
         <script>
             window.onload=function() {
                 // Month,Day,Year,Hour,Minute,Second
-                upTime('dec,05,2016,12:00:00'); // ****** Change this line!
+                upTime('dec,05,2015,12:00:00'); // ****** Change this line!
             };
             function upTime(countTo) {
             now = new Date();
