--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id="center">
 
             <div id="countup">
-                我们在一起
+              yangzaizai, 我们在一起
                 <p id="years">00</p>
                 <p class="timeRefYears">年</p>
                 <p id="days">00</p>
