--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <DOCTYPE! html>
 <html>
     <head>
-	<title>皮这一下很开心 </title>
+	<title>跟羊走天涯</title>
         <style>
             #countup p {
                 display: inline-block;
@@ -50,8 +50,8 @@
     <body id='bg'>
         <div id="center">
 
-            <div id="countup">
-              yangzaizai, 我们在一起
+            <div id="countup" style="font-size:40px">
+              羊崽崽, 我们在一起
                 <p id="years">00</p>
                 <p class="timeRefYears">年</p>
                 <p id="days">00</p>
